--- a/html.html
+++ b/html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<title>osef</title>
+	<title>JEU DE DAMES</title>
 	<link rel=stylesheet href=css.css >
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
@@ -11,5 +11,4 @@
 <button onclick="placement()">Placer pièces</button>
 <p class="compteur" id="cmpt1"></p>
 <p class="compteur" id="cmpt2"></p>
-<script src=script.js ></script>
 <script src=script.js ></script>
