Update pour le timer
Habilitation à l'utilisation susmentionnée du compteur moribond

--- a/html.html
+++ b/html.html
@@ -9,6 +9,7 @@
 
 <div id=element></div>
 <button onclick="placement()">Placer pièces</button>
-<p class="compteur" id="cmpt1"></p>
-<p class="compteur" id="cmpt2"></p>
+<p class="compteur" id="cmpt1"></p> <!-- Compteur joueur 1  -->
+<p class="compteur" id="cmpt2"></p> <!-- Compteur joueur 2  -->
 <script src=script.js ></script>
+<script src=compteur.js ></script>
