petit commit des familles

--- a/html.html
+++ b/html.html
@@ -8,7 +8,7 @@
 
 
 <div id=element></div>
-<button onclick="placement()">Placer pièces</button>
+<button onclick="placement()">JOUER</button>
 <p class="compteur" id="cmpt1"></p>
 <p class="compteur" id="cmpt2"></p>
 <script src=script.js ></script>
