--- a/html.html
+++ b/html.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<title>JEU DE DAMES</title>
+	<title>Jeu2Dames</title>
 	<link rel=stylesheet href=css.css >
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
+<h1>Jeu2Dames</h1>
 
-
-<div id=element></div>
-<button onclick="placement()">Placer pièces</button>
+<div id=element></div><br/>
+<button id=btnJouer onclick="placement()">JOUER</button>
 <p class="compteur" id="cmpt1"></p> <!-- Compteur joueur 1  -->
 <p class="compteur" id="cmpt2"></p> <!-- Compteur joueur 2  -->
 <script src=script.js ></script>
