Changements script.js et html

--- a/html.html
+++ b/html.html
@@ -13,4 +13,4 @@
 <p class="compteur" id="cmpt1"></p> <!-- Compteur joueur 1  -->
 <p class="compteur" id="cmpt2"></p> <!-- Compteur joueur 2  -->
 <script src=script.js ></script>
-<script src=compteur.js ></script>
+<script src=timer.js ></script>
