--- a/html.html
+++ b/html.html
@@ -6,11 +6,9 @@
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 </head>
 <h1>Jeu2Dames</h1>
-
-
-<div id=element></div><br/>
-<button id=btnJouer onclick="placement()">JOUER</button>
 <p class="compteur" id="cmpt1"></p> <!-- Compteur joueur 1  -->
 <p class="compteur" id="cmpt2"></p> <!-- Compteur joueur 2  -->
+<div id=element></div><br/>
+<button id=btnJouer onclick="placement()">Jouer</button>
 <script src=script.js ></script>
-<script src=compteur.js ></script>
+<script src=timer.js ></script>
